--- a/packages/chat-gui/package.json
+++ b/packages/chat-gui/package.json
@@ -6,13 +6,15 @@
     "bulma": "^0.7.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "sockette": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "sls deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "serverless": "^1.38.0"
+  }
 }
