--- a/packages/chat-gui/package.json
+++ b/packages/chat-gui/package.json
@@ -26,6 +26,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "serverless": "^1.38.0"
   }
 }
